fix:z-indexで階層変更

--- a/assets/css/hamburger.css
+++ b/assets/css/hamburger.css
@@ -88,5 +88,6 @@
 
 .slider-top{
   position: relative;
+  z-index: -1;
   top:80px;
 }
